# OCCT

./: .gitignore  CMakeLists.txt  README.md  RUST_PORT_STRATEGY.md  nextStep.md  package.json  pnpm-lock.yaml  portingMilestones.md
better_TUI/: README.md  package.json
better_TUI/scripts/: demo.js  smoke.js
better_TUI/src/: TerminalUI.js  index.js  widgets.js
capi/: CMakeLists.txt
capi/include/: lean_occt_capi.h
capi/src/: lean_occt_capi.cxx
capi/tests/: LeanOcctCapiSmoke.cxx
cmake/: LeanOcctSubset.cmake
codex-port-loop/: .gitignore  README.md  agent.mjs
rust/lean_occt/: Cargo.toml  README.md  build.rs
rust/lean_occt/examples/: boolean_step.rs  document_workflow.rs  feature_pipeline.rs  part_recipes.rs  query_driven_features.rs  schema_driven_pipeline.rs  selector_driven_recipe.rs
rust/lean_occt/src/: brep.rs  document.rs  high_level.rs  lib.rs  pipeline.rs  ported_geometry.rs  recipes.rs  schema.rs
rust/lean_occt/src/occt_port/: mod.rs
rust/lean_occt/src/occt_port/DataExchange/TKDE/DE/: DE_ConfigurationContext.rs  DE_ConfigurationNode.rs  DE_PluginHolder.rs  DE_Provider.rs  DE_ShapeFixConfigurationNode.rs  DE_ShapeFixParameters.rs  DE_ValidationUtils.rs  DE_Wrapper.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/APIHeaderSection/: APIHeaderSection_EditHeader.rs  APIHeaderSection_MakeHeader.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/DESTEPCore/: DESTEP_ConfigurationNode.rs  DESTEP_Parameters.rs  DESTEP_Provider.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/GeomToStep/: GeomToStep_MakeAxis1Placement.rs  GeomToStep_MakeAxis1Placement_gen.rs  GeomToStep_MakeAxis2Placement2d.rs  GeomToStep_MakeAxis2Placement3d.rs  GeomToStep_MakeBSplineCurveWithKnots.rs  GeomToStep_MakeBSplineCurveWithKnotsAndRationalBSplineCurve.rs  GeomToStep_MakeBSplineCurveWithKnotsAndRationalBSplineCurve_gen.rs  GeomToStep_MakeBSplineCurveWithKnots_gen.rs  GeomToStep_MakeBSplineSurfaceWithKnots.rs  GeomToStep_MakeBSplineSurfaceWithKnotsAndRationalBSplineSurface.rs  GeomToStep_MakeBoundedCurve.rs  GeomToStep_MakeBoundedSurface.rs  GeomToStep_MakeCartesianPoint.rs  GeomToStep_MakeCartesianTransformationOperator.rs  GeomToStep_MakeCircle.rs  GeomToStep_MakeCircle_gen.rs  GeomToStep_MakeConic.rs  GeomToStep_MakeConicalSurface.rs  GeomToStep_MakeCurve.rs  GeomToStep_MakeCylindricalSurface.rs  GeomToStep_MakeDirection.rs  GeomToStep_MakeElementarySurface.rs  GeomToStep_MakeEllipse.rs  GeomToStep_MakeEllipse_gen.rs  GeomToStep_MakeHyperbola.rs  GeomToStep_MakeLine.rs  GeomToStep_MakeLine_gen.rs  GeomToStep_MakeParabola.rs  GeomToStep_MakePlane.rs  GeomToStep_MakePolyline.rs  GeomToStep_MakePolyline_gen.rs  GeomToStep_MakeRectangularTrimmedSurface.rs  GeomToStep_MakeSphericalSurface.rs  GeomToStep_MakeSurface.rs  GeomToStep_MakeSurfaceOfLinearExtrusion.rs  GeomToStep_MakeSurfaceOfRevolution.rs  GeomToStep_MakeSweptSurface.rs  GeomToStep_MakeToroidalSurface.rs  GeomToStep_MakeVector.rs  GeomToStep_MakeVector_gen.rs  (+1 more)
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/HeaderSection/: HeaderSection.rs  HeaderSection_FileDescription.rs  HeaderSection_FileName.rs  HeaderSection_FileSchema.rs  HeaderSection_Protocol.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/RWHeaderSection/: RWHeaderSection.rs  RWHeaderSection_GeneralModule.rs  RWHeaderSection_RWFileDescription.rs  RWHeaderSection_RWFileName.rs  RWHeaderSection_RWFileSchema.rs  RWHeaderSection_ReadWriteModule.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/RWStepAP203/: RWStepAP203_RWCcDesignApproval.rs  RWStepAP203_RWCcDesignCertification.rs  RWStepAP203_RWCcDesignContract.rs  RWStepAP203_RWCcDesignDateAndTimeAssignment.rs  RWStepAP203_RWCcDesignPersonAndOrganizationAssignment.rs  RWStepAP203_RWCcDesignSecurityClassification.rs  RWStepAP203_RWCcDesignSpecificationReference.rs  RWStepAP203_RWChange.rs  RWStepAP203_RWChangeRequest.rs  RWStepAP203_RWStartRequest.rs  RWStepAP203_RWStartWork.rs
rust/lean_occt/src/occt_port/DataExchange/TKSTEPCore/RWStepAP214/: RWStepAP214.rs  RWStepAP214_GeneralModule.rs  RWStepAP214_RWAppliedApprovalAssignment.rs  RWStepAP214_RWClass.rs  (+25 more)
rust/lean_occt/src/occt_port/ModelingData/: mod.rs
rust/lean_occt/src/occt_port/ModelingData/TKBRep/: mod.rs
rust/lean_occt/src/occt_port/ModelingData/TKG3d/: mod.rs
rust/lean_occt/tests/: brep_workflows.rs  document_workflows.rs  ownership_matrix_workflows.rs  pipeline_workflows.rs  ported_geometry_workflows.rs  recipe_workflows.rs  schema_workflows.rs  selector_workflows.rs  workflows.rs
rust/lean_occt/tests/support/: mod.rs
samples/wasm/three_viewer/: CMakeLists.txt  OcctThreeDemo.cxx  OcctThreeDemo.html  README.md  package-lock.json  package.json  vite.config.mjs
samples/wasm/three_viewer/src/: main.js  styles.css
src/: MODULES.cmake
src/DataExchange/: TOOLKITS.cmake
src/DataExchange/TKSTEPCore/: EXTERNLIB.cmake  FILES.cmake  PACKAGES.cmake
src/DataExchange/TKSTEPCore/DESTEPCore/: FILES.cmake
src/DataExchange/TKSTEPCore/STEPConstructCore/: FILES.cmake
src/DataExchange/TKSTEPCore/STEPSelections/: FILES.cmake
src/DataExchange/TKSTEPCore/StepAP203/: FILES.cmake
src/DataExchange/TKSTEPCore/StepAP214/: FILES.cmake
src/DataExchange/TKSTEPCore/StepBasic/: FILES.cmake
src/DataExchange/TKSTEPCore/StepData/: FILES.cmake
src/DataExchange/TKSTEPCore/StepDimTol/: FILES.cmake
src/DataExchange/TKSTEPCore/StepElement/: FILES.cmake
src/DataExchange/TKSTEPCore/StepFEA/: FILES.cmake
src/DataExchange/TKSTEPCore/StepGeom/: FILES.cmake
src/DataExchange/TKSTEPCore/StepRepr/: FILES.cmake
src/DataExchange/TKSTEPCore/StepShape/: FILES.cmake
src/DataExchange/TKSTEPCore/StepToTopoDS/: FILES.cmake
src/DataExchange/TKSTEPCore/StepVisual/: FILES.cmake
src/FoundationClasses/: TOOLKITS.cmake
src/FoundationClasses/TKernel/Standard/: Standard_Version.hxx
src/ModelingAlgorithms/: TOOLKITS.cmake
src/ModelingData/: TOOLKITS.cmake
src/ModelingData/TKBRep/BRepGraph/: BRepGraph_VersionStamp.cxx
tools/reduction/: CMakeLists.txt  LeanExchangeSmoke.cxx  README.md  ROADMAP.md  export_subset.py
(+4946 files in other folders)
