project(OcctThreeDemo)

find_program(OCCT_NPM_EXECUTABLE NAMES npm)
if (NOT OCCT_NPM_EXECUTABLE)
  message(FATAL_ERROR "npm is required to package the OcctThreeDemo web viewer.")
endif()

add_executable(${PROJECT_NAME}
  OcctThreeDemo.cxx
)

target_link_libraries(${PROJECT_NAME} PRIVATE
  TKBool
  TKMesh
  TKPrim
  TKTopAlgo
  TKBRep
  TKGeomBase
  TKG3d
  TKG2d
  TKMath
  TKernel
)

set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY COMPILE_FLAGS " --bind")
set_property(TARGET ${PROJECT_NAME} APPEND_STRING PROPERTY LINK_FLAGS
  " --bind -s WASM=1 -s MODULARIZE=1 -s EXPORT_NAME='createOcctThreeDemo' -s ALLOW_MEMORY_GROWTH=1")

set_target_properties(${PROJECT_NAME} PROPERTIES
  FOLDER "Samples/WASM"
)

set(OCCT_WASM_DEMO_OUTPUT_DIR
  "${CMAKE_BINARY_DIR}/${OS_WITH_BIT}/${COMPILER}/bin${OCCT_INSTALL_BIN_LETTER}"
)

set(OCCT_WASM_DEMO_WEB_OUTPUT_DIR
  "${OCCT_WASM_DEMO_OUTPUT_DIR}/web"
)
set(OCCT_WASM_DEMO_WEBAPP_DIR
  "${CMAKE_CURRENT_BINARY_DIR}/webapp"
)
set(OCCT_WASM_DEMO_WEBAPP_SRC_DIR
  "${OCCT_WASM_DEMO_WEBAPP_DIR}/src"
)
set(OCCT_WASM_DEMO_NPM_STAMP
  "${CMAKE_CURRENT_BINARY_DIR}/OcctThreeDemo-npm.stamp"
)

add_custom_command(OUTPUT ${OCCT_WASM_DEMO_NPM_STAMP}
  COMMAND ${CMAKE_COMMAND} -E make_directory ${OCCT_WASM_DEMO_WEBAPP_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    ${CMAKE_CURRENT_SOURCE_DIR}/package-lock.json
    ${OCCT_WASM_DEMO_WEBAPP_DIR}
  COMMAND ${CMAKE_COMMAND} -E chdir
    ${OCCT_WASM_DEMO_WEBAPP_DIR}
    ${OCCT_NPM_EXECUTABLE} ci --no-fund --no-audit
  COMMAND ${CMAKE_COMMAND} -E touch ${OCCT_WASM_DEMO_NPM_STAMP}
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS
    ${CMAKE_CURRENT_SOURCE_DIR}/package.json
    ${CMAKE_CURRENT_SOURCE_DIR}/package-lock.json
)

add_custom_target(${PROJECT_NAME}Web
  COMMAND ${CMAKE_COMMAND} -E remove_directory ${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}
  COMMAND ${CMAKE_COMMAND} -E make_directory ${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}
  COMMAND ${CMAKE_COMMAND} -E make_directory ${OCCT_WASM_DEMO_WEBAPP_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.html
    ${CMAKE_CURRENT_SOURCE_DIR}/vite.config.mjs
    ${OCCT_WASM_DEMO_WEBAPP_DIR}
  COMMAND ${CMAKE_COMMAND} -E remove_directory ${OCCT_WASM_DEMO_WEBAPP_SRC_DIR}
  COMMAND ${CMAKE_COMMAND} -E copy_directory
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${OCCT_WASM_DEMO_WEBAPP_SRC_DIR}
  COMMAND ${CMAKE_COMMAND} -E env
    OCCT_WASM_WEB_OUTPUT_DIR=${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}
    ${CMAKE_COMMAND} -E chdir
    ${OCCT_WASM_DEMO_WEBAPP_DIR}
    ${OCCT_NPM_EXECUTABLE} run build
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${OCCT_WASM_DEMO_OUTPUT_DIR}/${PROJECT_NAME}.js
    ${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}/${PROJECT_NAME}.js
  COMMAND ${CMAKE_COMMAND} -E copy_if_different
    ${OCCT_WASM_DEMO_OUTPUT_DIR}/${PROJECT_NAME}.wasm
    ${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}/${PROJECT_NAME}.wasm
  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
  DEPENDS
    ${PROJECT_NAME}
    ${OCCT_WASM_DEMO_NPM_STAMP}
    ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.html
    ${CMAKE_CURRENT_SOURCE_DIR}/src/main.js
    ${CMAKE_CURRENT_SOURCE_DIR}/src/styles.css
    ${CMAKE_CURRENT_SOURCE_DIR}/vite.config.mjs
)

set_target_properties(${PROJECT_NAME}Web PROPERTIES
  FOLDER "Samples/WASM"
)

if (LAYOUT_IS_VCPKG)
  install(TARGETS ${PROJECT_NAME}
          DESTINATION "$<IF:$<CONFIG:Debug>,debug/${INSTALL_DIR_BIN},${INSTALL_DIR_BIN}>")
else()
  install(TARGETS ${PROJECT_NAME}
          DESTINATION "${INSTALL_DIR_BIN}\${OCCT_INSTALL_BIN_LETTER}")
endif()

install(FILES ${CMAKE_BINARY_DIR}/${OS_WITH_BIT}/${COMPILER}/bin\${OCCT_INSTALL_BIN_LETTER}/${PROJECT_NAME}.wasm
        DESTINATION "${INSTALL_DIR_BIN}/${OCCT_INSTALL_BIN_LETTER}")
install(DIRECTORY ${OCCT_WASM_DEMO_WEB_OUTPUT_DIR}/
        DESTINATION "${INSTALL_DIR_BIN}/${OCCT_INSTALL_BIN_LETTER}/web"
        OPTIONAL)
